tests/baselines/reference/decoratorOnClassConstructor1.errors.txt
tests/cases/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts(4,5): error TS1202: Decorators are not valid on this declaration type.


==== tests/cases/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec constructor() {}
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Decorators are not valid on this declaration type.
    }